Risk 02: Bingo!! spacing is working, highlighting is good, font is problamatic but imma fix it too.

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,10 @@
 * {
     font-family: 'Inter';
 }
+
+body {
+    background-color: white !important;;
+}
 :root {
     --background: #fff;
     --foreground: #000;
